examples/good/13-01-nested-functions.elina
fn f(x: int): int {

  fn g(y: int): int {
    return x + y;
  }

  return g(17);
}

fn main(): void {
  printInt(f(10));
}
