examples/bad/no-return.elina
fn f(argument: int): int {
}

fn main(): void {
}